# genai_docs_helper

./: .env.sample  .gitignore  Makefile  README.md  langgraph.json  links.txt  pyproject.toml  pytest.ini  requirments.txt  test_system.py
Notebooks/: interactive_chat_from_markdown.ipynb  learn.ipynb  load_docs.ipynb  load_docs_noteooks.ipynb  simple_graph.ipynb  ts-10-validation-methods-for-time-series.ipynb  ts-3-time-series-for-finance.ipynb  ts-5-automatic-for-the-people.ipynb  ts-8-hierarchical-time-series.ipynb  ts-9-hybrid-methods.ipynb
Notebooks/Notebooks_HTML/: ts-1a-smoothing-methods.html  ts-1b-prophet.html  ts-3-time-series-for-finance.html  ts-4-sales-and-demand-forecasting.html  ts-5-automatic-for-the-people.html  ts-6-deep-learning-for-ts-rnn-and-friends.html  ts-8-hierarchical-time-series.html  ts-9-hybrid-methods.html
Notebooks/data/chroma_db/de52e1ed-2a2b-413c-b89e-4c1b3fab897b/: index_metadata.pickle
Notebooks/demand_forecast_notebooks/: ts-0-the-basics.ipynb  ts-11-deep-learning-for-ts-transfer-learning.ipynb  ts-1a-smoothing-methods.ipynb  ts-1b-prophet.ipynb  ts-2-linear-vision.ipynb  ts-4-sales-and-demand-forecasting.ipynb  ts-6-deep-learning-for-ts-rnn-and-friends.ipynb
Notebooks_HTML/: ts-0-the-basics.html  ts-10-validation-methods-for-time-series.html  ts-11-deep-learning-for-ts-transfer-learning.html  ts-2-linear-vision.html  ts-7-survival-analysis.html
Video_transcripts/: tactiq-free-transcript-cKzXOOtOXYY.txt  tactiq-free-transcript-kAI67Sz92-s.txt
data/chroma_db/f5954e60-ed05-4d3e-8ada-b25a24ce7b9b/: index_metadata.pickle
data/demand_forecast_notebooks/: ts-3-time-series-for-finance.ipynb  ts-7-survival-analysis.ipynb
data/docs/: 0_basics_2.md  0_project_overview.md  1_prophet.md  1_smoothing.md  2_linear.md
data/warehouse_docs/: Business_Intelligence_Dashboard_and_Reporting_System.md  Data_Preprocessing_and_Quality_Assurance_Pipeline.md  Feature_Engineering_and_Selection_Guide.md  Lag_Analysis_and_Temporal_Pattern_Discovery.md  Model_Performance_Evaluation_and_Validation_Framework.md  Model_Selection_and_Experimentation_Guide.md  Multi_Warehouse_Forecasting_Model_Design.md  Real_time_Forecasting_and_Batch_Processing_Pipeline.md  Recursive_Forecasting_Implementation_Guide.md  Retail_Demand_Forecasting_System_Architecture.md  Time_Series_Feature_Engineering_and_Selection_Strategy.md
docs/: genai_docs_helper.html  index.html  search.js
docs/genai_docs_helper/: cache.html  chains.html  config.html  consts.html  graph.html  loader_embed_to_vectorstore.html  monitoring.html  nodes.html  state.html  utils.html
docs/genai_docs_helper/chains/: answer_grader.html  batch_grader.html  confidence_scorer.html  document_reranker.html  generation.html  hallucination_grader.html  paraphraser.html  query_expander.html  retrieval_grader.html
docs/genai_docs_helper/nodes/: generate.html  grade_documents.html  paraphrase.html  retrieve.html
genai_docs/: pyvenv.cfg
genai_docs/share/jupyter/lab/static/: 6180.fc7de057fa46a06cc871.js  8492.3e6c3b4cb9cc0cac5ae4.js  build_log.json  index.html  jlab_core.5aa373b4d2384b44ed86.js  main.26aa817373fdc578edb6.js
genai_docs/share/jupyter/labextensions/@jupyter-notebook/lab-extension/: package.json
genai_docs/share/jupyter/labextensions/@jupyter-notebook/lab-extension/static/: 568.3cb448443af65777b224.js  644.9e5b98f5332cc9dc3be5.js  928.daae2253ddb4a34b8e58.js  remoteEntry.642880ef752d818c35bb.js  third-party-licenses.json
genai_docs_helper/: app.py  chain.py  config.py  consts.py  graph.py  loader_embed_to_vectore.py  loader_embed_to_vectorstore.py  main.py  state.py  test_main.py
genai_docs_helper/cache/: README.md  __init__.py  query_cache.py
genai_docs_helper/chains/: README.md  answer_grader.py  batch_grader.py  confidence_scorer.py  document_reranker.py  generation.py  hallucination_grader.py  paraphraser.py  query_expander.py  retrieval_grader.py
genai_docs_helper/legacy_graph/: main.py
genai_docs_helper/monitoring/: README.md  __init__.py  performance_monitor.py
genai_docs_helper/nodes/: README.md  __init__.py  generate.py  grade_documents.py  paraphrase.py  retrieve.py
genai_docs_helper/utils/: __init__.py  logging_config.py
tests/: conftest.py
tests/integration/: test_workflow.py
tests/unit/cache/: test_query_cache.py
tests/unit/monitoring/: test_performance_monitor.py
tests/unit/nodes/: test_generate.py  test_grade_documents.py  test_paraphrase.py  test_retrieve.py
