[tool.poetry]
name = "genai_docs_helper"
version = "0.1.0"
description = ""
authors = ["Ali Zarreh <alireza.zarreh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.18"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
anyio = "4.9.0"
asgiref = "3.8.1"
asttokens = "3.0.0"
async-timeout = "4.0.3"
attrs = "25.3.0"
backoff = "2.2.1"
bcrypt = "4.3.0"
beautifulsoup4 = "4.13.4"
build = "1.2.2.post1"
cachetools = "5.5.2"
certifi = "2025.4.26"
cffi = "1.17.1"
chardet = "5.2.0"
charset-normalizer = "3.4.1"
chroma-hnswlib = "0.7.6"
chromadb = "1.0.7"
click = "8.1.8"
coloredlogs = "15.0.1"
comm = "0.2.2"
cryptography = "44.0.2"
dataclasses-json = "0.6.7"
debugpy = "1.8.14"
decorator = "5.2.1"
deprecated = "1.2.18"
distro = "1.9.0"
dotenv = "0.9.9"
durationpy = "0.9"
emoji = "2.14.1"
eval-type-backport = "0.2.2"
exceptiongroup = "1.2.2"
executing = "2.2.0"
fastapi = "0.115.9"
fastjsonschema = "2.21.1"
filelock = "3.18.0"
filetype = "1.2.0"
flatbuffers = "25.2.10"
frozenlist = "1.6.0"
fsspec = "2025.3.2"
google-auth = "2.39.0"
googleapis-common-protos = "1.70.0"
greenlet = "3.2.1"
grpcio = "1.71.0"
h11 = "0.16.0"
html5lib = "1.1"
httpcore = "1.0.9"
httptools = "0.6.4"
httpx = "0.28.1"
httpx-sse = "0.4.0"
huggingface-hub = "0.30.2"
humanfriendly = "10.0"
idna = "3.10"
importlib-metadata = "8.6.1"
importlib-resources = "6.5.2"
ipykernel = "6.29.5"
ipython = "8.36.0"
jedi = "0.19.2"
jiter = "0.9.0"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2025.4.1"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
kubernetes = "32.0.1"
langchain = "^0.3.24"
langchain-community = "^0.3.23"
langchain-core = "^0.3.56"
langchain-text-splitters = "^0.3.8"
langdetect = "1.0.9"
langsmith = "^0.3.38"
lxml = "5.4.0"
markdown = "3.8"
markdown-it-py = "3.0.0"
marshmallow = "3.26.1"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
mmh3 = "5.1.0"
monotonic = "1.6"
mpmath = "1.3.0"
multidict = "6.4.3"
mypy-extensions = "1.1.0"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
nltk = "3.9.1"
numpy = "2.2.5"
oauthlib = "3.2.2"
olefile = "0.47"
onnxruntime = "1.21.1"
openai = "^1.76.0"
opentelemetry-api = "1.32.1"
opentelemetry-exporter-otlp-proto-common = "1.32.1"
opentelemetry-exporter-otlp-proto-grpc = "1.32.1"
opentelemetry-instrumentation = "0.53b1"
opentelemetry-instrumentation-asgi = "0.53b1"
opentelemetry-instrumentation-fastapi = "0.53b1"
opentelemetry-proto = "1.32.1"
opentelemetry-sdk = "1.32.1"
opentelemetry-semantic-conventions = "0.53b1"
opentelemetry-util-http = "0.53b1"
orjson = "3.10.16"
overrides = "7.7.0"
packaging = "24.2"
parso = "0.8.4"
pexpect = "4.9.0"
platformdirs = "4.3.7"
posthog = "4.0.0"
prompt-toolkit = "3.0.51"
propcache = "0.3.1"
protobuf = "5.29.4"
psutil = "7.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.2"
pycparser = "2.22"
pydantic = "2.11.3"
pydantic-settings = "2.9.1"
pydantic-core = "2.33.1"
pygments = "2.19.1"
pypdf = "5.4.0"
pypika = "0.48.9"
pyproject-hooks = "1.2.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.0"
python-iso639 = "2025.2.18"
python-magic = "0.4.27"
python-oxmsg = "0.0.2"
pyyaml = "6.0.2"
pyzmq = "26.4.0"
rapidfuzz = "3.13.0"
referencing = "0.36.2"
regex = "2024.11.6"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
rich = "14.0.0"
rpds-py = "0.24.0"
rsa = "4.9.1"
shellingham = "1.5.4"
six = "1.17.0"
sniffio = "1.3.1"
soupsieve = "2.7"
sqlalchemy = "2.0.40"
stack-data = "0.6.3"
starlette = "0.45.3"
sympy = "1.14.0"
tenacity = "9.1.2"
tiktoken = "0.9.0"
tokenizers = "0.21.1"
tomli = "2.2.1"
tornado = "6.4.2"
tqdm = "4.67.1"
traitlets = "5.14.3"
typer = "0.15.3"
typing-inspect = "0.9.0"
typing-inspection = "0.4.0"
typing-extensions = "4.13.2"
unstructured = "0.17.2"
unstructured-client = "0.34.0"
urllib3 = "2.4.0"
uvicorn = "0.34.2"
uvloop = "0.21.0"
watchfiles = "1.0.5"
wcwidth = "0.2.13"
webencodings = "0.5.1"
websocket-client = "1.8.0"
websockets = "15.0.1"
wrapt = "1.17.2"
yarl = "1.20.0"
zipp = "3.21.0"
zstandard = "0.23.0"
langgraph = {extras = ["studio"], version = "^0.5.0"}
langgraph-cli = {extras = ["inmem"], version = "^0.3.3"}
black = "^25.1.0"
isort = "^6.0.1"
autoflake = "^2.3.1"
langchain-ollama = "^0.3.3"
langchain-openai = "^0.3.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
